--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
   <h1>Etch-a-Sketch</h1>
+  <button id="resetColor" onclick="resetBColor(event)">Reset</button>
   <div id="gridContainer">
   </div>
   <script src="js/scripts.js"></script>
